Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108298

Crash using ConicalGradient in a ShapePath

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.15.12, 6.2.7, 6.4.2, 6.5.0 Beta1
    • 6.3.0, 6.4
    • Quick: Shapes
    • None
    • Tested on Windows 11 and Fedora 37
    • Linux/X11, Windows
    • e52efc3def (qt/qtdeclarative/dev) e52efc3def (qt/tqtc-qtdeclarative/dev) 173624e486 (qt/qtdeclarative/6.4) 173624e486 (qt/tqtc-qtdeclarative/6.4) fe896f5245 (qt/tqtc-qtdeclarative/5.15) 840c03cf24 (qt/tqtc-qtdeclarative/6.2)

    Description

      The following code using a ConicalGradient with a QML Shape crashes:

      import QtQuick 2.15
      import QtQuick.Window 2.15
      import QtQuick.Shapes 1.4
      
      Window {
          width: 640
          height: 480
          visible: true
          title: qsTr("Hello World")
      
          Shape {
              id: shape
              width: 200
              height: 200
              ShapePath {
                  fillColor: "pink"
                  strokeWidth: 1
      
                  fillGradient: ConicalGradient {
                      centerX: 65
                      centerY: 65
                      angle: 2
                  }
      
                  PathAngleArc {
                      centerX: 65; centerY: 95
                      radiusX: 45; radiusY: 45
                      startAngle: 0
                      sweepAngle: 360
                  }
              }
          }
      }
      

      Running this results causes an "index out of range" error in QList.

      Attachments

        For Gerrit Dashboard: QTBUG-108298
        # Subject Branch Project Status CR V

        Activity

          People

            lagocs Laszlo Agocs
            daljit97 Daljit Singh
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes