Handle missing stops gracefully in Shape gradients

Fixes: QTBUG-108298
Change-Id: Ib6e004a1518aec4c786c3aeebcd74e6cb11f45ef
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit e52efc3defe102a55b45b013764ba1bae1fe5a1b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>